--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,3 @@
 ---
-title: "unplanned_pregnancies_data_story"
+title: "Unplanned Pregnancies: Data Story"
 ---
-
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
